# BDNewsPaperScraper

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  bdpratidin_log.txt  docker-compose.yml  init.sql  kubernetes.yml  performance_monitor.py  pyproject.toml  quickstart.py  quickstart.sh  requirements.txt  run_spiders.sh  run_spiders_optimized.bat  run_spiders_optimized.py  run_spiders_optimized.sh  scrapy.cfg  scrapybdscrapers.md  setup.sh  test_spiders.sh  todo.md  toxlsx.py  uv.toml
.github/workflows/: ci.yml  cicd.yml  daily-scrape.yml  pages.yml
.planning/: STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
BDNewsPaper/: ai_repair.py  antibot.py  api.py  bengalidate_to_englishdate.py  captcha_bypass.py  checkpoints.py  cli.py  cloudflare_bypass.py  config.py  distributed.py  dynamic_config.py  enums.py  extractors.py  geo_mimicry.py  graphql_api.py  honeypot.py  hybrid_request.py  items.py  link_discovery.py  middlewares.py  monitoring.py  pipelines.py  postgres_pipeline.py  prometheus_metrics.py  proxy.py  scrapling_integration.py  search.py  settings.py  stealth_headers.py  webhooks.py
BDNewsPaper/spiders/: ajkerpatrika.py  alokitobangladesh.py  amaderbarta.py  amadershomoy.py  arthosuchak.py  atnnews.py  auto_spider.py  bangladeshpost.py  banglanews24.py  banglatribune.py  banglavision.py  barishaltimes.py  barta24.py  base_spider.py  bbcbangla.py  bd24live.py  bdjournalism.py  bdnews24.py  bdnews24_bangla.py  bdpratidin.py  bdpratidin_bangla.py  bhorerkagoj.py  bonikbarta.py  bssbangla.py  bssnews.py  channeli.py  comillarkagoj.py  coxsbazarnews.py  ctgtimes.py  dailyasianage.py  dailybogra.py  dailyinqilab.py  dailysangram.py  dailysun.py  dailysylhet.py  dainikbangla.py  dbcnews.py  deeptotv.py  deshrupantor.py  dhakacourier.py  (+55 more)
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
config/: prometheus.yml  proxies.txt.sample
data/: README.md  articles.json  articles.sql  dataset-metadata.json  starter-notebook.ipynb
data/daily/2025-12-29/: README.md  articles.json  articles.sql
docs/: DOCS.md  index.html  todo.md
feeds/: all.xml  artho_suchak.xml  bd_pratidin.xml  bss_news.xml  dhaka_tribune.xml  index.html  new_age.xml  prothom_alo.xml  the_bangladesh_today.xml  the_financial_express.xml
k8s/: api.yaml  scraper.yaml
maps/: map.html
notebooks/: kernel-metadata.json  starter-notebook.ipynb
reports/: report_20251226_175714.md  report_20251226_182208.md
scripts/: alerts.py  analytics.py  archive_org.py  bias_detection.py  breaking_news.py  canary_check.py  content_similarity.py  dashboard.py  dashboard_enhanced.py  diagnose_spiders.py  discord_bot.py  elasticsearch_search.py  email_reports.py  fix_all_spiders.py  fix_article_extraction.py  geo_mapping.py  graphql_api.py  huggingface_upload.py  kaggle_upload.py  news_timeline.py  performance_monitor.py  redis_cache.py  rss_feed.py  s3_storage.py  slack_bot.py  status_page.py  telegram_bot.py  test_all_spiders.py  topic_clustering.py  toxlsx.py  update_spiders_fallback.py  webhooks.py
tests/: README.md  __init__.py  conftest.py  test_bengali_date.py  test_cloudflare_bypass.py  test_extractors.py  test_integration.py  test_items.py  test_middlewares.py  test_pipelines.py  test_smoke.py  test_sqlite_pipeline.py
timeline/: timeline_all_20251226.html
