[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bdnewspaper-scraper"
version = "1.0.0"
description = "High-performance web scraper for Bangladeshi newspapers using Scrapy"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "BDNewsPaper Team" }
]
keywords = ["scrapy", "web-scraping", "bangladesh", "news", "newspapers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "scrapy>=2.14.0",
    "scrapy-playwright>=0.0.46",
    "playwright>=1.58.0",
    "pytz>=2026.1",
    "requests>=2.32.5",
    "lxml>=6.0.0",
    "attrs>=25.4.0",
    "itemadapter>=0.13.1",
    "itemloaders>=1.4.0",
    "w3lib>=2.4.0",
    "cssselect>=1.4.0",
    "parsel>=1.11.0",
    "queuelib>=1.9.0",
    "twisted>=25.5.0",
    "cryptography>=46.0.0",
    "pyopenssl>=25.3.0",
    "service-identity>=24.2.0",
    "defusedxml>=0.7.1",
    "protego>=0.6.0",
    "packaging>=26.0",
    "tldextract>=5.3.0",
    "zope.interface>=8.2",
    "langdetect>=1.0.9",
    "python-dotenv>=1.2.0",
    "httpx>=0.28.1",  # Modern async HTTP client
    "trafilatura>=2.0.0",  # Article extraction fallback
    "brotli>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "black>=26.3.0",
    "isort>=8.0.0",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
]
performance = [
    "uvloop>=0.22.0",  # Faster event loop for Linux/macOS
    "cchardet>=2.1.7",  # Faster character encoding detection
    "brotli>=1.2.0",    # Better compression
]
monitoring = [
    "psutil>=7.2.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.4.0",
]
cloudflare = [
    "curl_cffi>=0.14.0",  # TLS/JA4/HTTP2 fingerprinting (latest Chrome profiles, HTTP/3 support)
    "prometheus-client>=0.24.0",  # Metrics for monitoring
    "scrapling>=0.4.1",  # Native Cloudflare Turnstile bypass via Patchright
    "browserforge>=1.2.4",  # Statistically coherent browser fingerprint generation
    "camoufox>=0.4.0",  # Firefox-based stealth browser (harder to detect than Chromium)
]
antibot = [
    "curl_cffi>=0.14.0",
    "browserforge>=1.2.4",
    "camoufox>=0.4.0",
    "scrapling>=0.4.1",
]
scrapling = [
    "scrapling>=0.4.1",  # Anti-bot fetcher with CF Turnstile bypass
]
distributed = [
    "celery[redis]>=5.6.0",  # Distributed task queue
    "redis>=7.3.0",  # Redis client
    "flower>=2.0.1",  # Celery monitoring
    "psutil>=7.2.0",  # System monitoring
]
gui = [
    "streamlit>=1.55.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
]
api = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.0",
]
graphql = [
    "strawberry-graphql[fastapi]>=0.308.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
]
postgres = [
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.0",
]
all = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.0",
    "strawberry-graphql[fastapi]>=0.308.0",
    "psycopg2-binary>=2.9.11",
    "streamlit>=1.55.0",
    "pandas>=3.0.0",
    "scrapling>=0.4.1",
    "curl_cffi>=0.14.0",
    "browserforge>=1.2.4",
    "camoufox>=0.4.0",
]
analytics = [
    "textblob>=0.19.0",
    "wordcloud>=1.9.6",
    "matplotlib>=3.10.0",
    "plotly>=6.6.0",
]
dashboard = [
    "streamlit>=1.55.0",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "wordcloud>=1.9.6",
    "matplotlib>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/EhsanulHaqueSiam/BDNewsPaperScraper"
Repository = "https://github.com/EhsanulHaqueSiam/BDNewsPaperScraper"
Issues = "https://github.com/EhsanulHaqueSiam/BDNewsPaperScraper/issues"

[project.scripts]
bdnews = "BDNewsPaper.cli:main"
bdnews-scrape = "BDNewsPaper.cli:main"
bdnews-monitor = "performance_monitor:main"

[tool.hatch.build.targets.wheel]
packages = ["BDNewsPaper"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | httpcache
  | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Scrapy spiders often have untyped methods
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "twisted.*",
    "w3lib.*",
    "itemadapter.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=BDNewsPaper",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["BDNewsPaper"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
